# JrOpenSpec

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  FASE_6_RESUMEN.md  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml  pytest.ini  requirements-backend-test.txt
rest_api/: Dockerfile  pyproject.toml
rest_api/app/: __init__.py  dependencies.py  exception_handlers.py  main.py
rest_api/app/core/: cors.py
rest_api/app/dependencies/: __init__.py  table_token.py
rest_api/app/middleware/: __init__.py  content_type.py  correlation_id.py  rate_limit.py  security_headers.py
rest_api/app/routers/: health.py
rest_api/app/routers/auth/: __init__.py  routes.py  schemas.py
rest_api/app/routers/dashboard/: __init__.py  allergens.py  badges.py  batch_price.py  branch_products.py  cooking_methods.py  dietary_profiles.py  product_extended.py  seals.py
rest_api/app/routers/public/: __init__.py  allergens.py  branches.py  menu.py  session_router.py
rest_api/app/routers/v1/: __init__.py  assignments.py  branches.py  categories.py  products.py  restaurants.py  roles.py  sectors.py  staff.py  subcategories.py  tables.py
rest_api/app/schemas/: __init__.py  allergen.py  assignment.py  badge.py  batch_price.py  branch.py  branch_product.py  category.py  cooking_method.py  dietary_profile.py  envelope.py  product.py  product_extended.py  public_menu.py  restaurant.py  role.py  seal.py  sector.py  session.py  staff.py  subcategory.py  table.py  table_token.py
rest_api/app/services/: __init__.py  auth_service.py  cache_invalidation.py  cache_service.py
rest_api/app/services/domain/: __init__.py  allergen_service.py  assignment_service.py  badge_service.py  batch_price_service.py  branch_product_service.py  branch_service.py  category_service.py  cooking_method_service.py  dietary_profile_service.py  product_extended_service.py  product_service.py  public_menu_service.py  restaurant_service.py  roles_service.py  seal_service.py  sector_service.py  session_service.py  staff_service.py  subcategory_service.py  table_service.py
rest_api/app/services/permissions/: __init__.py  context.py  strategies.py
rest_api/scripts/: seed.py
shared/: pyproject.toml
shared/shared/: __init__.py  config.py  enums.py  exceptions.py
shared/shared/config/: __init__.py  constants.py
shared/shared/infrastructure/: __init__.py  db.py  redis.py
shared/shared/models/: __init__.py  base.py  mixins.py
shared/shared/models/billing/: __init__.py  allocation.py  (+3 more)
shared/shared/repositories/: __init__.py  assignment_repository.py  base.py  branch.py  sector_repository.py  staff_repository.py  table_repository.py  table_session_repository.py  tenant.py
shared/shared/security/: __init__.py  blacklist.py  brute_force.py  jwt.py  passwords.py  table_token.py  table_tokens.py
ws_gateway/: Dockerfile  main.py  pyproject.toml
(+518 files in other folders)
