[project]
name = "rest-api"
version = "0.1.0"
description = "Integrador REST API - FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "alembic>=1.13",
    "passlib[bcrypt]>=1.7",
    "bcrypt>=4.0,<4.1",
    "shared",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "scripts*"]
