[project]
name = "rest-api"
version = "0.1.0"
description = "Integrador REST API - FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "alembic>=1.13",
    "passlib[bcrypt]>=1.7",
    "bcrypt>=4.0,<4.1",
    "python-jose[cryptography]>=3.3",
    "pydantic[email]>=2.0",
    "slowapi>=0.1.9",
    "shared",
]

[project.optional-dependencies]
test = [
    "pytest>=8.4,<9",
    "pytest-asyncio>=1.1,<2",
    "httpx>=0.28,<1",
    "aiosqlite>=0.21,<1",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["rest_api*"]
