[project]
name = "ws-gateway"
version = "0.1.0"
description = "Integrador WebSocket Gateway — real-time event hub"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "shared",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
